--- a/RESUME.HTML
+++ b/RESUME.HTML
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
-<title>RESUM</title>
+<title>RESUME</title>
 
 <style type="text/css">
     table {
@@ -58,7 +58,15 @@
                 
             </table>
         </div>
+      <h2><u>HOBBIES</u></h2>
+          <p>Reading books,Travelling</p>
+           <p>Singing and Sketching</p>
+          <h2><u>LANGUAGES</u></h2>
+           <p>Hindi</p>
+           <p>English.</p> 
+          <h2><u>SKILLS</u></h2>
+           <p>C,C++ and HTML.</p>
         <h2><u>WORK  EXPERIENCE</u></h2>
-        <p>Fresher</p>
+        <p>Fresher.</p>
 </body>
 </html>
